@@ -26,8 +26,8 @@
  * @summary Test Thread.holdsLock when lock held by carrier thread
  * @requires vm.continuations
  * @modules java.base/java.lang:+open
- * @compile --enable-preview -source ${jdk.version} HoldsLock.java
- * @run testng/othervm --enable-preview HoldsLock
+ * @enablePreview
+ * @run testng HoldsLock
  */
 
 /**
@@ -35,8 +35,8 @@
  * @summary Test Thread.holdsLock when lock held by carrier thread
  * @requires vm.continuations & vm.debug
  * @modules java.base/java.lang:+open
- * @compile --enable-preview -source ${jdk.version} HoldsLock.java
- * @run testng/othervm --enable-preview -XX:+UseHeavyMonitors HoldsLock
+ * @enablePreview
+ * @run testng/othervm -XX:+UseHeavyMonitors HoldsLock
  */
 
 import java.lang.management.LockInfo;
